test: create new MySQL tables for handling nulls

--- a/data.ipynb
+++ b/data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 439,
    "id": "09e0a70b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 440,
    "id": "684c8e79",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
        "True"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 440,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 441,
    "id": "db2d5101",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 442,
    "id": "4a20b851",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 443,
    "id": "5d82dc47",
    "metadata": {},
    "outputs": [
@@ -13105,7 +13105,7 @@
        " 'ExcelAddInVersion': '2.1.0'}"
       ]
      },
-     "execution_count": 356,
+     "execution_count": 443,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13123,7 +13123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 444,
    "id": "ec62644a",
    "metadata": {},
    "outputs": [],
@@ -13143,7 +13143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 445,
    "id": "3541af08",
    "metadata": {},
    "outputs": [],
@@ -13154,7 +13154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 446,
    "id": "fdc41ef0",
    "metadata": {},
    "outputs": [],
@@ -13178,7 +13178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 447,
    "id": "53e0cff6",
    "metadata": {},
    "outputs": [
@@ -13298,7 +13298,7 @@
        "6   2024      AL      ALL   2795343   11.9  10415.17361  87522.93201"
       ]
      },
-     "execution_count": 360,
+     "execution_count": 447,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13315,7 +13315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 448,
    "id": "6a59e640",
    "metadata": {},
    "outputs": [
@@ -13356,7 +13356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 449,
    "id": "3e84b60c",
    "metadata": {},
    "outputs": [
@@ -13432,7 +13432,7 @@
        "2   False    False     False      False  False    False  False"
       ]
      },
-     "execution_count": 362,
+     "execution_count": 449,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13452,22 +13452,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 450,
    "id": "702ea6ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nulls were dropped, 1860 records remain\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dropping rows with at least one null value\n",
-    "df = df.dropna()\n",
-    "print(f\"Nulls were dropped, {len(df)} records remain\")\n"
+    "    # df = df.dropna()\n",
+    "    # print(f\"Nulls were dropped, {len(df)} records remain\")"
    ]
   },
   {
@@ -13480,7 +13472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 451,
    "id": "650a2771",
    "metadata": {},
    "outputs": [],
@@ -13495,7 +13487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 452,
    "id": "cc2aadbe",
    "metadata": {},
    "outputs": [],
@@ -13517,7 +13509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 453,
    "id": "8b82e0b1",
    "metadata": {},
    "outputs": [],
@@ -13529,7 +13521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 454,
    "id": "8b396c9c",
    "metadata": {},
    "outputs": [],
@@ -13548,31 +13540,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 455,
    "id": "8ff2be22",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# checking if our table actually exists in mysql\n",
-    "sql_table = \"e_sales_annual\"\n",
+    "sql_table = \"e_sales_null\"\n",
     "# this method executes the given database query\n",
     "a = cur.execute(f\"SELECT * FROM {sql_table}\") \n",
     "b = cur.fetchall()\n",
-    "print(b)\n",
-    "# printing a returns none, seems that cur.execute() will always return that"
+    "# printing a returns none, seems that cur.execute() will always return that\n",
+    "# Chat: cursor.execute() only executes the query and returns the number of rows affected, not the data itself."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 456,
    "id": "d501df6f",
    "metadata": {},
    "outputs": [
@@ -13595,7 +13579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 457,
    "id": "e7da6642",
    "metadata": {},
    "outputs": [
@@ -13603,20 +13587,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     period stateid sectorid customers  price     revenue        sales\n",
-      "0      2024      AK      ALL    356597  22.17  1340.53299   6046.50298\n",
-      "1      2024      AK      COM     57009  21.57   561.56579   2603.67399\n",
-      "2      2024      AK      IND      1191  19.31   264.99921   1372.23499\n",
-      "4      2024      AK      RES    298397  24.82     513.968   2070.59399\n",
-      "5      2024      AK      TRA         0      0           0            0\n",
-      "...     ...     ...      ...       ...    ...         ...          ...\n",
-      "2226   2019      WY      ALL    344500    8.1   1358.4307  16763.49601\n",
-      "2227   2019      WY      COM     58325   9.64    344.7123     3575.477\n",
-      "2228   2019      WY      IND     11294   6.73   695.29501    10338.641\n",
-      "2230   2019      WY      RES    274881  11.18    318.4234   2849.37801\n",
-      "2231   2019      WY      TRA         0      0           0            0\n",
+      "     period stateid sectorid customers  price     revenue       sales\n",
+      "0      2024      AK      ALL    356597  22.17  1340.53299  6046.50298\n",
+      "1      2024      AK      COM     57009  21.57   561.56579  2603.67399\n",
+      "2      2024      AK      IND      1191  19.31   264.99921  1372.23499\n",
+      "3      2024      AK      OTH      None   None        None        None\n",
+      "4      2024      AK      RES    298397  24.82     513.968  2070.59399\n",
+      "...     ...     ...      ...       ...    ...         ...         ...\n",
+      "2227   2019      WY      COM     58325   9.64    344.7123    3575.477\n",
+      "2228   2019      WY      IND     11294   6.73   695.29501   10338.641\n",
+      "2229   2019      WY      OTH      None   None        None        None\n",
+      "2230   2019      WY      RES    274881  11.18    318.4234  2849.37801\n",
+      "2231   2019      WY      TRA         0      0           0           0\n",
       "\n",
-      "[1860 rows x 7 columns]\n"
+      "[2232 rows x 7 columns]\n"
      ]
     }
    ],
@@ -13633,7 +13617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 458,
    "id": "12acf470",
    "metadata": {},
    "outputs": [],
@@ -13647,7 +13631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 459,
    "id": "6b454aca",
    "metadata": {},
    "outputs": [],
@@ -13672,7 +13656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 460,
    "id": "3f3180ee",
    "metadata": {},
    "outputs": [
@@ -13680,7 +13664,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1060\n"
+      "2232\n"
      ]
     }
    ],
@@ -13690,7 +13674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 461,
    "id": "58958710",
    "metadata": {},
    "outputs": [
@@ -13698,7 +13682,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Success! 1860 uploaded.\n",
+      "Success! Attempted to upload 2232 records.\n",
+      "Actual records uploaded: 2232\n",
       "All database connects closed. Clean up completed.\n"
      ]
     }
@@ -13706,11 +13691,14 @@
    "source": [
     "# return how many rows we uploaded to MySQL\n",
     "rows_uploaded = len(list_of_sales_tuples)\n",
+    "cur.execute(f\"SELECT COUNT(*) FROM {sql_table}\")\n",
+    "upload_count = cur.fetchone()[0]\n",
     "\n",
     "try: \n",
     "    cur.executemany(UPSERT_SQL, list_of_sales_tuples)\n",
     "    db_connection.commit()\n",
-    "    print(f\"Success! {rows_uploaded} uploaded.\")\n",
+    "    print(f\"Success! Attempted to upload {rows_uploaded} records.\")\n",
+    "    print(f\"Actual records uploaded: {upload_count}\")\n",
     "except Exception as e:\n",
     "    db_connection.rollback()\n",
     "    print(f\"Error! Rollback due to {e}\")\n",
@@ -13755,6 +13743,7 @@
     "- Did all the non null rows get loaded in? Do a before and after check.\n",
     "- What if we wanted to load null values into mysql? What to do after defining schema to accept nulls? Do we need to tag null values with \"\\n\" like in LOAD DATA INFILE()? \n",
     "- Connecting to sql server vs database? \n",
+    "- Do you need to close connection everytime? Does it only upload after the connection is closed?\n",
     "\n",
     "## Next steps:\n",
     "- read more documentations on how to get pandas DF to Mysql. Common ETL problems and approaches. "
