fix: cleaned up comments/code

--- a/data.ipynb
+++ b/data.ipynb
@@ -26,32 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
-   "id": "684c8e79",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 440,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "load_dotenv() # this must be run in order to grant getenv function permission to access objects in .env file. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": null,
    "id": "db2d5101",
    "metadata": {},
    "outputs": [],
    "source": [
+    "load_dotenv() # this must be run in order to grant getenv function permission to access objects in .env file. \n",
+    "\n",
     "# senseitive information stored in .env file\n",
     "API_KEY = os.getenv(\"API_KEY\")\n",
     "API_HOST = os.getenv(\"API_HOST\")"
@@ -81,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": null,
    "id": "5d82dc47",
    "metadata": {},
    "outputs": [
@@ -13115,10 +13096,7 @@
     "response = requests.get(url)\n",
     "# Printing response would return the 200 code\n",
     "json_data = response.json() # accessing the json formatted data\n",
-    "json_data \n",
-    "# examines what the data hierarchy looks like within the \"response\" key, where the data we want is imbedded\n",
-    "\n",
-    "# there are a total of 1770 records"
+    "json_data # examines what the data hierarchy looks like within the \"response\" key, where the data we want is imbedded"
    ]
   },
   {
@@ -13652,24 +13630,6 @@
     "# why did he put triple quotes for f string? \n",
     "# ON DUPLICATE KEY UPDATE helps prevent duplicate rows, just update existing row.\n",
     "# initially caused our data to be truncated because our primary key wasn't specific enough, and led to multiple records collapsing together."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 460,
-   "id": "3f3180ee",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2232\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(rows_uploaded)"
    ]
   },
   {
