fix: clean up optimize code

--- a/data.ipynb
+++ b/data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 779,
    "id": "09e0a70b",
    "metadata": {},
    "outputs": [],
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 780,
    "id": "db2d5101",
    "metadata": {},
    "outputs": [],
    "source": [
     "load_dotenv() # this must be run in order to grant getenv function permission to access objects in .env file. \n",
     "\n",
-    "# senseitive information stored in .env file\n",
+    "# retrieve sensitive information stored in local .env file\n",
     "API_KEY = os.getenv(\"API_KEY\")\n",
     "API_HOST = os.getenv(\"API_HOST\")"
    ]
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 781,
    "id": "4a20b851",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 782,
    "id": "5d82dc47",
    "metadata": {},
    "outputs": [
@@ -13086,7 +13086,7 @@
        " 'ExcelAddInVersion': '2.1.0'}"
       ]
      },
-     "execution_count": 443,
+     "execution_count": 782,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13094,14 +13094,14 @@
    "source": [
     "# Storing the API response into a variable\n",
     "response = requests.get(url)\n",
-    "# Printing response would return the 200 code\n",
+    "# Printing response would return the 200 code --> indicating success\n",
     "json_data = response.json() # accessing the json formatted data\n",
     "json_data # examines what the data hierarchy looks like within the \"response\" key, where the data we want is imbedded"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 783,
    "id": "ec62644a",
    "metadata": {},
    "outputs": [],
@@ -13121,7 +13121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 784,
    "id": "3541af08",
    "metadata": {},
    "outputs": [],
@@ -13132,7 +13132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 785,
    "id": "fdc41ef0",
    "metadata": {},
    "outputs": [],
@@ -13156,7 +13156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 786,
    "id": "53e0cff6",
    "metadata": {},
    "outputs": [
@@ -13276,7 +13276,7 @@
        "6   2024      AL      ALL   2795343   11.9  10415.17361  87522.93201"
       ]
      },
-     "execution_count": 447,
+     "execution_count": 786,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13285,15 +13285,12 @@
     "# create pandas dataframe\n",
     "df = pd.DataFrame(rows, columns=column_names)\n",
     "df.head(7)\n",
-    "# null values are represented as None or NaN (not a number), with the latter having a mathematical significance to it. Source: https://www.geeksforgeeks.org/python/difference-between-nan-and-none-in-python/\n",
-    "\n",
-    "\n",
-    "# how to force data type and skip over rows with missing data?"
+    "# null values are represented as None or NaN (not a number), with the latter having a mathematical significance to it. Source: https://www.geeksforgeeks.org/python/difference-between-nan-and-none-in-python/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 787,
    "id": "6a59e640",
    "metadata": {},
    "outputs": [
@@ -13320,7 +13317,6 @@
    ],
    "source": [
     "df.info()\n",
-    "# why is Dtype all objects? Suspect there are misisng data causing python reader to cast entire column to object type. \n",
     "# Non-Null Count indicates that there are lots of missing data"
    ]
   },
@@ -13334,7 +13330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 788,
    "id": "3e84b60c",
    "metadata": {},
    "outputs": [
@@ -13410,7 +13406,7 @@
        "2   False    False     False      False  False    False  False"
       ]
      },
-     "execution_count": 449,
+     "execution_count": 788,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13430,14 +13426,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 791,
    "id": "702ea6ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 rows containing nulls were dropped, 1860 records remain\n"
+     ]
+    }
+   ],
    "source": [
     "# Dropping rows with at least one null value\n",
-    "    # df = df.dropna()\n",
-    "    # print(f\"Nulls were dropped, {len(df)} records remain\")"
+    "dfn = len(df)\n",
+    "df = df.dropna()\n",
+    "print(f\"{dfn - len(df)} rows containing nulls were dropped, {len(df)} records remain\")"
    ]
   },
   {
@@ -13450,7 +13455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 716,
    "id": "650a2771",
    "metadata": {},
    "outputs": [],
@@ -13465,12 +13470,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 717,
    "id": "cc2aadbe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# making the connection\n",
+    "# testing to see if we can connect to the server\n",
     "server_connection = connector.connect(\n",
     "    host = MYSQL_HOST,\n",
     "    port = MYSQL_PORT,\n",
@@ -13482,29 +13487,20 @@
     ")\n",
     "\n",
     "# a cursor is an structure allowing us to traverse a result set. Allows python to communicate with the database \n",
-    "server_cursor = server_connection.cursor()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 453,
-   "id": "8b82e0b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# not sure why we need to close the connections. To simply test if we can connect to server? \n",
+    "server_cursor = server_connection.cursor()\n",
+    " \n",
     "server_cursor.close()\n",
     "server_connection.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 718,
    "id": "8b396c9c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# connecting to database\n",
+    "# connecting to our specific database\n",
     "db_connection = connector.connect(\n",
     "    host = MYSQL_HOST,\n",
     "    port = MYSQL_PORT,\n",
@@ -13513,51 +13509,37 @@
     "    database = MYSQL_DATABASE\n",
     ")\n",
     "\n",
+    "# creating the cursor\n",
     "cur = db_connection.cursor(buffered=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
-   "id": "8ff2be22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# checking if our table actually exists in mysql\n",
-    "sql_table = \"e_sales_null\"\n",
-    "# this method executes the given database query\n",
-    "a = cur.execute(f\"SELECT * FROM {sql_table}\") \n",
-    "b = cur.fetchall()\n",
-    "# printing a returns none, seems that cur.execute() will always return that\n",
-    "# Chat: cursor.execute() only executes the query and returns the number of rows affected, not the data itself."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 456,
-   "id": "d501df6f",
+   "execution_count": 719,
+   "id": "51897164",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Success\n"
+      "None\n",
+      "('2019', 'AK', 'ALL', 345496, 20, 1176, 5819)\n"
      ]
     }
    ],
    "source": [
-    "if cur.fetchall() is None:\n",
-    "    raise SystemExit(f\"This table {sql_table} is NOT found\")\n",
-    "else:\n",
-    "    print(f\"Success\")\n",
-    "\n",
-    "# seems to be giving None when I run fetchone because there is no existing data at first, then inserted some dummy data and ran again. Returned Success."
+    "# cursor execute helps SQL prepare the data, but fetch commands (one, many, all) must be run to return the result set back to Python.\n",
+    "sql_table = \"e_sales\"\n",
+    "a = cur.execute(f\"SELECT * fROM {sql_table}\")\n",
+    "b = cur.fetchone() # this returns the following row each time it's called, which can return \"none\" if there are no more rows in the table.\n",
+    "print(a)\n",
+    "print(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": null,
    "id": "e7da6642",
    "metadata": {},
    "outputs": [
@@ -13565,37 +13547,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     period stateid sectorid customers  price     revenue       sales\n",
-      "0      2024      AK      ALL    356597  22.17  1340.53299  6046.50298\n",
-      "1      2024      AK      COM     57009  21.57   561.56579  2603.67399\n",
-      "2      2024      AK      IND      1191  19.31   264.99921  1372.23499\n",
-      "3      2024      AK      OTH      None   None        None        None\n",
-      "4      2024      AK      RES    298397  24.82     513.968  2070.59399\n",
-      "...     ...     ...      ...       ...    ...         ...         ...\n",
-      "2227   2019      WY      COM     58325   9.64    344.7123    3575.477\n",
-      "2228   2019      WY      IND     11294   6.73   695.29501   10338.641\n",
-      "2229   2019      WY      OTH      None   None        None        None\n",
-      "2230   2019      WY      RES    274881  11.18    318.4234  2849.37801\n",
-      "2231   2019      WY      TRA         0      0           0           0\n",
+      "     period stateid sectorid customers  price     revenue        sales\n",
+      "0      2024      AK      ALL    356597  22.17  1340.53299   6046.50298\n",
+      "1      2024      AK      COM     57009  21.57   561.56579   2603.67399\n",
+      "2      2024      AK      IND      1191  19.31   264.99921   1372.23499\n",
+      "4      2024      AK      RES    298397  24.82     513.968   2070.59399\n",
+      "5      2024      AK      TRA         0      0           0            0\n",
+      "...     ...     ...      ...       ...    ...         ...          ...\n",
+      "2226   2019      WY      ALL    344500    8.1   1358.4307  16763.49601\n",
+      "2227   2019      WY      COM     58325   9.64    344.7123     3575.477\n",
+      "2228   2019      WY      IND     11294   6.73   695.29501    10338.641\n",
+      "2230   2019      WY      RES    274881  11.18    318.4234   2849.37801\n",
+      "2231   2019      WY      TRA         0      0           0            0\n",
       "\n",
-      "[2232 rows x 7 columns]\n"
+      "[1860 rows x 7 columns]\n"
      ]
     }
    ],
    "source": [
-    "# UPSERT = update and insert\n",
-    "\n",
+    "# select custom columns we want from our original data frame\n",
     "table_cols = ['period', 'stateid', 'sectorid', 'customers', 'price', 'revenue', 'sales']\n",
     "\n",
     "sales_df = df[table_cols]\n",
-    "print(sales_df)\n",
-    "# what is the purpose of this step? Didn't we already create a df earlier? \n",
-    "# seems like it is a way to select custom columns we want from our original data frame"
+    "print(sales_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 721,
    "id": "12acf470",
    "metadata": {},
    "outputs": [],
@@ -13609,14 +13588,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": null,
    "id": "6b454aca",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# UPSERT = update and insert\n",
+    "# ON DUPLICATE KEY UPDATE helps prevent duplicate rows, just update existing row.\n",
+    "\n",
     "UPSERT_SQL = f\"\"\"\n",
     "INSERT INTO {sql_table}\n",
-    "(period, stateid, sectorid, customers, price, revenue, sales)\n",
     "VALUES(%s, %s, %s, %s, %s, %s, %s) AS src\n",
     "ON DUPLICATE KEY UPDATE\n",
     "period = src.period,\n",
@@ -13627,14 +13608,14 @@
     "revenue = src.revenue,\n",
     "sales = src.sales;\n",
     "\"\"\"\n",
-    "# why did he put triple quotes for f string? \n",
-    "# ON DUPLICATE KEY UPDATE helps prevent duplicate rows, just update existing row.\n",
+    "# the triple quotes are for passing in multi line strings\n",
+    "# \"%\" tells Python we are passing in parameters\n",
     "# initially caused our data to be truncated because our primary key wasn't specific enough, and led to multiple records collapsing together."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 723,
    "id": "58958710",
    "metadata": {},
    "outputs": [
@@ -13642,14 +13623,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Success! Attempted to upload 2232 records.\n",
-      "Actual records uploaded: 2232\n",
+      "Success! Attempted to upload 1860 records.\n",
+      "Actual records uploaded: 1860\n",
       "All database connects closed. Clean up completed.\n"
      ]
     }
    ],
    "source": [
-    "# return how many rows we uploaded to MySQL\n",
+    "# return how many rows we tried uploaded & uploaded to MySQL\n",
     "rows_uploaded = len(list_of_sales_tuples)\n",
     "cur.execute(f\"SELECT COUNT(*) FROM {sql_table}\")\n",
     "upload_count = cur.fetchone()[0]\n",
@@ -13670,41 +13651,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71580cf7",
-   "metadata": {},
-   "source": [
-    "### Above code chunk initially gave: Error! Rollback due to 1048 (23000): Column 'customers' cannot be null All database connects closed. Clean up completed.\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "61ba34c0",
-   "metadata": {},
-   "source": [
-    "potential reasons/solutions:\n",
-    "- make our SQL table to accept nulls\n",
-    "- see what our data frame currently looks like\n",
-    "- make sure data types are changed in our initial df table, understand how this affects later steps (what variables are using df)\n",
-    "- look at other articles on how to ETL, consult more sources, understand the process\n",
-    "\n",
-    "\n",
-    "Article: \n",
-    "- https://www.getgalaxy.io/learn/common-errors/mysql-error-1048-column-cannot-be-null--causes-fixes\n",
-    "- https://levelup.gitconnected.com/rest-api-to-mysql-database-using-python-eb7b4606d6c3\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "d8f33622",
    "metadata": {},
    "source": [
-    "## Questions:\n",
-    "- Did all the non null rows get loaded in? Do a before and after check.\n",
-    "- What if we wanted to load null values into mysql? What to do after defining schema to accept nulls? Do we need to tag null values with \"\\n\" like in LOAD DATA INFILE()? \n",
-    "- Connecting to sql server vs database? \n",
-    "- Do you need to close connection everytime? Does it only upload after the connection is closed?\n",
-    "\n",
     "## Next steps:\n",
     "- read more documentations on how to get pandas DF to Mysql. Common ETL problems and approaches. "
    ]
